--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "start chrome http://localhost:3100 && next dev -p 3100",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.3.4",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
+    "framer-motion": "^4.0.0",
     "next": "10.0.9",
+    "next-google-fonts": "^2.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   }
