--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
     "next-google-fonts": "^2.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.2.5",
+    "postcss": "^8.2.8",
+    "tailwindcss": "^2.0.4"
   }
 }
